k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-toko-baju
spec:
  replicas: 3
  selector:
    matchLabels:
      app: toko-baju
  template:
    metadata:
      labels:
        app: toko-baju
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
        ports:
        - containerPort: 80

        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html

      volumes:
      - name: html-volume
        configMap:
          name: konfigurasi-html-index
