k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-masuk-nginx
spec:
  type: NodePort
  selector:
    app: toko-abadi
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
